--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,3 +1,12 @@
+html, body {
+    margin: 0;      /* gets rid of the white strip */
+    padding: 0;
+  }
 .container{
     padding:2% 10%;
+    background-image: url("bg.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    
 }
